--- a/bio.html
+++ b/bio.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY BIO</title>
+	<title>EMAI'S BIO</title>
+	<link href="resume.css" rel="stylesheet" />
 </head>
 <body>
+
+	<h2>My name is Emai. I am a sophomore at Tufts University studying Human Factors Engineering with a focus in UI/UX design, and double minoring in Computer Science and Film and Media Studies. I believe my combination of studies is a unique one, but really, I just like making things: stories, designs, websites, programs... everything!</h2>
+
+	<h2>In addition to my academics, I enjoy performing with Public Harmony and making videos for the Institute Sketch Comedy and Tufts University Television on campus.</h2> 
+
+	<h2>I hope to find a career path in the intersection of all my creative interests.</h2>
 
 </body>
 </html>
