--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>EMAI'S BIO</title>
+	<meta charset="utf-8" />
 	<link href="resume.css" rel="stylesheet" />
 </head>
 <body>
